feat: full documentation for AccountController.java
