# src/main/java/com/example/bankcards/dto/pagination/PageCardResponse.java
@@ -1,0 +1,20 @@
+package com.example.bankcards.dto.pagination;
+
+import com.example.bankcards.dto.response.CardResponse;
+
+import java.util.List;
+
+public record PageCardResponse(
+        List<CardResponse> content,
+        PageableObject pageable,
+        boolean last,
+        int totalElements,
+        int totalPages,
+        boolean first,
+        int size,
+        int number,
+        SortObject sort,
+        int numberOfElements,
+        boolean empty
+) {
+}
