# src/main/java/com/example/bankcards/dto/pagination/PageableObject.java
@@ -1,0 +1,11 @@
+package com.example.bankcards.dto.pagination;
+
+public record PageableObject(
+        int pageNumber,
+        int pageSize,
+        SortObject sort,
+        int offset,
+        boolean paged,
+        boolean unpaged
+) {
+}
